--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "jquery": "^3.7.1",
+    "luxon": "^3.7.2",
     "ngx-cookie-service": "^19.1.2",
     "ngx-mask": "^20.0.3",
+    "ngx-mat-timepicker": "19.0.0",
     "ngx-material-timepicker": "^13.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
